# yolov-8-c-plus-plus

./: .gitignore  CMakeLists.txt  main.cpp
